--- a/merch.html
+++ b/merch.html
@@ -62,7 +62,7 @@
                 <div><img src="img/mock-poster.jpg" alt=""></div>
 
                 <div>
-                    <h3><b><i>FLUR</i><br>Alubm Art Poster</b></h3>
+                    <h3><b><i>FLUR</i><br>Album Art Poster</b></h3>
                     <p>Celebrate the spirit of FLUR with this striking album art poster. Featuring vivid blue, purple, and pink tones, it captures the essence of the music and adds a vibrant touch to any space.</p>
                     <h3><b>$ 14.99</b></h3>
                     <button>Add to Cart</button>
